--- a/TestHero/ClientApp/package.json
+++ b/TestHero/ClientApp/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@mui/material": "^5.12.2",
+    "@mui/styled-engine-sc": "^5.12.0",
     "bootstrap": "^5.1.3",
     "http-proxy-middleware": "^2.0.6",
     "jquery": "^3.6.0",
@@ -15,6 +17,7 @@
     "react-scripts": "^5.0.1",
     "reactstrap": "^9.1.1",
     "rimraf": "^3.0.2",
+    "styled-components": "^5.3.10",
     "web-vitals": "^2.1.4",
     "workbox-background-sync": "^6.5.3",
     "workbox-broadcast-update": "^6.5.3",
