--- a/TestHero/ClientApp/package.json
+++ b/TestHero/ClientApp/package.json
@@ -3,8 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@mui/material": "^5.12.2",
+    "@mui/material": "^5.12.3",
     "@mui/styled-engine-sc": "^5.12.0",
+    "axios": "^1.4.0",
     "bootstrap": "^5.1.3",
     "http-proxy-middleware": "^2.0.6",
     "jquery": "^3.6.0",
