Fixed bugs with the API for the login

--- a/TestHero/appsettings.json
+++ b/TestHero/appsettings.json
@@ -1,10 +1,13 @@
 {
   "Logging": {
-      "LogLevel": {
+    "LogLevel": {
       "Default": "Information",
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
-      }
-    },
+    }
+  },
+  "ConnectionStrings": {
+    "Default": "Server=127.0.0.1;Port=3306;Database=testhero;Uid=root;password=123;"
+  },
 "AllowedHosts": "*"
 }
