--- a/TestHero/ClientApp/package.json
+++ b/TestHero/ClientApp/package.json
@@ -6,14 +6,16 @@
     "@mui/material": "^5.12.3",
     "@mui/styled-engine-sc": "^5.12.0",
     "axios": "^1.4.0",
-    "bootstrap": "^5.1.3",
+    "bootstrap": "^5.2.3",
     "http-proxy-middleware": "^2.0.6",
     "jquery": "^3.6.0",
     "merge": "^2.1.1",
     "oidc-client": "^1.11.5",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.7.4",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
+    "react-modal": "^3.16.1",
     "react-router-bootstrap": "^0.26.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "^5.0.1",
