--- a/TestHero/ClientApp/package.json
+++ b/TestHero/ClientApp/package.json
@@ -22,6 +22,7 @@
     "reactstrap": "^9.1.1",
     "rimraf": "^3.0.2",
     "styled-components": "^5.3.10",
+    "sweetalert": "^2.1.2",
     "web-vitals": "^2.1.4",
     "workbox-background-sync": "^6.5.3",
     "workbox-broadcast-update": "^6.5.3",
