Tags y Boton Copiar actualizado

--- a/TestHero/appsettings.json
+++ b/TestHero/appsettings.json
@@ -7,7 +7,7 @@
     }
   },
   "ConnectionStrings": {
-    "Default": "Server=127.0.0.1;Port=3306;Database=testhero;Uid=root;password=;"
+    "Default": "Server=127.0.0.1;Port=3306;Database=testhero;Uid=root;password=my_password;"
   },
 "AllowedHosts": "*"
 }
