--- a/TestHero/ClientApp/package.json
+++ b/TestHero/ClientApp/package.json
@@ -3,12 +3,14 @@
   "version": "2.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.4.0",
     "@mui/material": "^5.12.3",
     "@mui/styled-engine-sc": "^5.12.0",
     "axios": "^1.4.0",
     "bootstrap": "^5.2.3",
     "http-proxy-middleware": "^2.0.6",
     "jquery": "^3.6.0",
+    "mdb-react-ui-kit": "^6.1.0",
     "merge": "^2.1.1",
     "moment": "^2.29.4",
     "oidc-client": "^1.11.5",
