--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
     "bootstrap": "^5.2.3",
     "moment": "^2.29.4",
     "react-router-dom": "^5.3.4",
-    "sweetalert": "^2.1.2"
+    "sweetalert": "^2.1.2",
+    "victory": "^34.0.0",
+    "victory-histogram": "^36.6.10"
   }
 }
