--- a/TestHero/ClientApp/package.json
+++ b/TestHero/ClientApp/package.json
@@ -26,6 +26,8 @@
     "rimraf": "^3.0.2",
     "styled-components": "^5.3.10",
     "sweetalert": "^2.1.2",
+    "victory": "^34.0.0",
+    "victory-histogram": "^36.6.10",
     "web-vitals": "^2.1.4",
     "workbox-background-sync": "^6.5.3",
     "workbox-broadcast-update": "^6.5.3",
